  * doc/apt-cache.8.xml:
    - apply madison typofix from John Feuerstein, thanks! (Closes: #633455)
  * apt-pkg/policy.cc:
    - emit an error on unknown APT::Default-Release value (Closes: #407511)
  * apt-pkg/aptconfiguration.cc:
    - ensure that native architecture is if not specified otherwise the
      first architecture in the Architectures vector

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jul 2011 12:36:07 +0200

apt (0.8.15.2) unstable; urgency=high

  * fix from David Kalnischkies for the InRelease gpg verification 
    code (LP: #784473)

 -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200

apt (0.8.15.1) unstable; urgency=low

  [ David Kalnischkies ]
  * doc/makefile:
    - create doxygen directory to avoid depending on magic (Closes: #628799)
  * cmdline/apt-key:
    - explicitly state that net-update is not supported if no url is set
    - require to be root for add, rm, update and net-update
    - clarify update vs. net-update in different distros (Closes: #632043)
  * debian/apt.symbols:
    - forgot 'mips' in the list for all architecture dependent symbols
    - comment out gcc-4.5 specific symbols as gcc-4.6 is now default
    - the symbol for PrintStatus() is architecture dependent
  * apt-pkg/policy.cc:
    - do not segfault in pinning if a package with this name doesn't exist.
      Thanks to Ferdinand Thommes for the report!
    - Defaults is a vector of Pin not of PkgPin
    - ensure that only the first specific stanza for a package is used
    - save all stanzas which had no effect in Unmatched
    - allow package:architecure in Package:

 -- Michael Vogt <mvo@debian.org>  Thu, 30 Jun 2011 10:05:36 +0200

apt (0.8.15) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/depcache.cc:
    - Really release action groups only once (Closes: #622744)
    - Make purge work again for config-files (LP: #244598) (Closes: #150831)
  * apt-pkg/acquire-item.cc: