@@ -34,8 +34,12 @@ apt (0.8.15.3) UNRELEASED; urgency=low
   * apt-pkg/aptconfiguration.cc:
     - ensure that native architecture is if not specified otherwise the
       first architecture in the Architectures vector
+  * apt-pkg/deb/deblistparser.cc:
+    - Strip only :any and :native if MultiArch should be stripped as it is
+      save to ignore them in non-MultiArch contexts but if the dependency
+      is a specific architecture (and not the native) do not strip
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jul 2011 12:36:07 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jul 2011 12:46:19 +0200
 
 apt (0.8.15.2) unstable; urgency=high
 
